--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
             <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
         </dependency>
 
+
      
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -55,6 +56,12 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.11.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
