--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,13 @@ quarkus.log.level=INFO
 quarkus.log.category."com.visuall".level=DEBUG
 
 # CORS para Frontend
+# Configuração CORS completa para Quarkus
 
 quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
-
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS,HEAD,PATCH
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with,origin,access-control-request-method,access-control-request-headers
+quarkus.http.cors.exposed-headers=
+quarkus.http.cors.access-control-max-age=24H
 
 
 # Hibernate
