--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ quarkus.datasource.jdbc.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 quarkus.http.port=8080
 quarkus.http.cors=true
 
+quarkus.http.filter.CorsServletFilter.path=/*
+quarkus.http.filter.CorsServletFilter.order=1
+
 # Logging
 quarkus.log.level=INFO
 quarkus.log.category."com.visuall".level=DEBUG
