Configuração CORS definitiva para Quarkus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,6 @@ quarkus.datasource.jdbc.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 
 # HTTP
 quarkus.http.port=8080
-quarkus.http.cors=true
-
 quarkus.http.filter.CorsServletFilter.path=/*
 quarkus.http.filter.CorsServletFilter.order=1
 
@@ -17,12 +15,11 @@ quarkus.log.level=INFO
 quarkus.log.category."com.visuall".level=DEBUG
 
 # CORS para Frontend
-# Configuração CORS completa para Quarkus
-
-#quarkus.http.cors.origins=*
-#quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with,origin,access-control-request-method,access-control-request-headers
-#quarkus.http.cors.exposed-headers=
-#quarkus.http.cors.access-control-max-age=24H
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS,HEAD
+quarkus.http.cors.headers=origin,content-type,accept,authorization,x-requested-with
+quarkus.http.cors.access-control-max-age=86400
 
 
 # Hibernate
