--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,10 @@
             <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+        </dependency>
      
         <dependency>
             <groupId>io.quarkus</groupId>
