--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ quarkus.http.cors.access-control-max-age=86400
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=none
+
+quarkus.arc.remove-unused-beans=false
